<resources>
    <string name="app_name">Restaurante</string>

    <string name="edt_consumo">Consumo Total R$: </string>
    <string name="edt_couvert_artistico">Couvert Artistico R$: </string>
    <string name="edt_dividir">Dividir Contar por: </string>

    <string name="bt_calcular">Calcular Conta Final</string>

    <string name="edt_servico">Taxa de Serviço(10%)R$: </string>
    <string name="edt_conta_total">Conta Total R$: </string>
    <string name="edt_valor_pessoa">Valor por Pessoa R$: </string>
</resources>
